<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="net.yan.kotlin.promoters.principal.HomeViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:fitsSystemWindows="true"
        tools:context=".principal.HomeFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_marginBottom="70dp"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:focusable="true"
                android:minHeight="148dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="194dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/cat_card_rich_media_image_view_description"
                        app:backgroundTint="@color/material_on_surface_emphasis_medium"
                        app:backgroundTintMode="add"
                        app:srcCompat="@drawable/ic_components_24px" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/cat_card_double_spacing"
                        android:paddingBottom="@dimen/cat_card_single_spacing">

                        <com.google.android.material.textview.MaterialTextView
                            style="?attr/textAppearanceHeadline5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/cat_card_single_spacing"
                            android:text="@string/cat_card_rich_media_view_title" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RatingBar
                                style="?android:attr/ratingBarStyleSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/cat_card_rich_media_rating_view_description"
                                android:isIndicator="true"
                                android:numStars="5"
                                android:rating="4.5"

                                android:stepSize="0.5" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cat_card_rich_media_ratxing_text" />
                        </LinearLayout>

                        <TextView
                            style="?attr/textAppearanceSubtitle1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/cat_card_double_spacing"
                            android:singleLine="true"
                            android:text="@string/cat_card_rich_media_view_secondary_line_text" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/cat_card_single_spacing"
                            android:maxLines="2"
                            android:text="@string/cat_card_selectable_content" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="@dimen/cat_card_triple_spacing"
                            android:layout_marginBottom="@dimen/cat_card_single_spacing"
                            android:background="?attr/dividerHorizontal" />

                        <TextView
                            style="?attr/textAppearanceHeadline6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/cat_card_double_spacing"
                            android:layout_marginBottom="@dimen/cat_card_single_spacing"
                            android:text="@string/cat_card_rich_media_view_subtitle" />

                        <com.google.android.material.chip.ChipGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.chip.Chip
                                style="@style/Widget.MaterialComponents.Chip.Action"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cat_card_rich_media_chip_title_1" />

                            <com.google.android.material.chip.Chip
                                style="@style/Widget.MaterialComponents.Chip.Action"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cat_card_rich_media_chip_title_2" />

                            <com.google.android.material.chip.Chip
                                style="@style/Widget.MaterialComponents.Chip.Action"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cat_card_rich_media_chip_title_3" />

                            <com.google.android.material.chip.Chip
                                style="@style/Widget.MaterialComponents.Chip.Action"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cat_card_rich_media_chip_title_4" />
                        </com.google.android.material.chip.ChipGroup>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/cat_card_single_spacing"
                        android:paddingRight="@dimen/cat_card_single_spacing"
                        android:paddingBottom="@dimen/cat_card_single_spacing">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/sair"
                            style="?attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/cat_card_single_spacing"
                            android:layout_marginRight="@dimen/cat_card_single_spacing"
                            android:onClick="@{() -> viewModel.sair()}"
                            android:text="@string/cat_card_rich_media_action_1" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:fitsSystemWindows="true"
            app:elevation="5dp"
            app:navigationContentDescription="Decript"
            app:navigationIcon="@drawable/ic_menu_black_24dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Descrp"
            app:layout_anchor="@id/bar"
            android:clickable="true"
            android:onClick="@{() -> viewModel.addLocalAndVenda()}"
            app:srcCompat="@drawable/ic_add_black_24dp" />


        <FrameLayout
            android:id="@+id/bottom_drawer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="16dp"
            app:behavior_hideable="true"
            app:behavior_peekHeight="0dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <com.google.android.material.navigation.NavigationView
                android:id="@+id/navigation_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu="@menu/demo_primary" />
        </FrameLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>